tests/golden/err-unknown-tag/expected_error.txt
error: `Tag` に `.dvi` はありません
 --> ./entry.clum:3:7
  |
3 |     h .dvi
  |       ^^^^ もしかして `.div` ですか？
